Bug 132243 - [CSSRegions] Slider displayed wrong in regions
Summary: [CSSRegions] Slider displayed wrong in regions
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: CSS (show other bugs)
Version: 528+ (Nightly build)
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Andrei Bucur
URL:
Keywords:
: 131032 (view as bug list)
Depends on:
Blocks: 57312
  Show dependency treegraph
 
Reported: 2014-04-27 23:19 PDT by Mihnea Ovidenie
Modified: 2014-05-08 01:14 PDT (History)
10 users (show)

See Also:


Attachments
Test case (799 bytes, text/html)
2014-04-27 23:19 PDT, Mihnea Ovidenie
no flags Details
Patch (10.33 KB, patch)
2014-05-05 06:41 PDT, Andrei Bucur
no flags Details | Formatted Diff | Diff
Patch for landing (10.33 KB, patch)
2014-05-05 07:09 PDT, Andrei Bucur
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Mihnea Ovidenie 2014-04-27 23:19:11 PDT
Created attachment 230281 [details]
Test case

In the attached test case, a absolutely positioned input element of type range, displayed in the second region, does not have its thumb displayed. If you change the test to display the slider in the first region or you change its parent display to block, the slider is correctly displayed.
Comment 1 Andrei Bucur 2014-05-05 06:41:31 PDT
Created attachment 230826 [details]
Patch
Comment 2 Andrei Bucur 2014-05-05 06:55:45 PDT
*** Bug 131032 has been marked as a duplicate of this bug. ***
Comment 3 Mihnea Ovidenie 2014-05-05 07:01:23 PDT
Comment on attachment 230826 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=230826&action=review

r=me

> Source/WebCore/rendering/RenderFlowThread.cpp:808
> +        // video box becasue it's not a block; they need to be patched separately).

nit: because
Comment 4 Andrei Bucur 2014-05-05 07:09:46 PDT
Created attachment 230828 [details]
Patch for landing
Comment 5 WebKit Commit Bot 2014-05-05 07:48:05 PDT
Comment on attachment 230828 [details]
Patch for landing

Clearing flags on attachment: 230828

Committed r168286: <http://trac.webkit.org/changeset/168286>
Comment 6 WebKit Commit Bot 2014-05-05 07:48:08 PDT
All reviewed patches have been landed.  Closing bug.
Comment 8 Andreas Kling 2014-05-06 21:50:13 PDT
(In reply to comment #7)
> Looks like this patch caused 1.5% to 2% perf. regressions on html5-full-render:
> https://perf.webkit.org/#mode=charts&chartList=%5B%5B%22mac-mavericks%22%2C%22Parser%2Fhtml5-full-render%3ATime%22%5D%2C%5B%22mac-mountainlion%22%2C%22Parser%2Fhtml5-full-render%3ATime%22%5D%5D&days=5

I don't think that test will ever hit this code path in RenderFlowThread.
Comment 9 Andrei Bucur 2014-05-07 03:56:56 PDT
Taking a look now.
Comment 10 Andrei Bucur 2014-05-07 07:01:46 PDT
html5-full-render uses multi-col :). It might have been caused by enabling the new-multicol implementation or by this patch. I'm trying to optimize getRegionRangeForBox.
Comment 11 Andrei Bucur 2014-05-07 09:14:11 PDT
Indeed it seems there's a regression here. I'm looking for a fix.
Comment 12 Andrei Bucur 2014-05-08 01:14:23 PDT
I've filed a new bug for this: https://bugs.webkit.org/show_bug.cgi?id=132672